WebKitTools/DumpRenderTree/qt/DumpRenderTreeQt.h
@@ -109,6 +109,7 @@ public Q_SLOTS:
     void connectFrame(QWebFrame *frame);
     void dumpDatabaseQuota(QWebFrame* frame, const QString& dbName);
     void statusBarMessage(const QString& message);
+    void windowCloseRequested();
 
 Q_SIGNALS:
     void quit();
